# marcus_gazebo

./: CMakeLists.txt  README.md  package.xml
launch/: basic.launch  baylands.launch  spawn_kopterworx.launch
models/kopterworx/urdf/: kopterworx.urdf.xacro  kopterworx_base.urdf.xacro
models/util/: multirotor_base.urdf.xacro
